Add a page navigation.

--- a/server/views/partials/navbar.jade
+++ b/server/views/partials/navbar.jade
@@ -15,6 +15,8 @@ nav.navbar.navbar-default.navbar-fixed-top.nav-height
                 a(href='/map') 课程
             li
                 a(href='/group' target='_blank') 同城
+            li
+                a(href='https://weidian.com/?userid=291045087' target='_blank') 周边
             //关闭问答BBS
                 li
                     a(href='//bbs.freecodecamp.cn/' target='_blank') 问答
