Change gitter room to Chinese one

--- a/server/views/challenges/showBonfire.jade
+++ b/server/views/challenges/showBonfire.jade
@@ -30,13 +30,13 @@ block content
                             .button-spacer
                 if (user)
                 label.btn.btn-primary.btn-block.btn-lg#submitButton
-                        | Run tests (ctrl + enter)
+                        | 运行测试 (ctrl + enter)
                 .button-spacer
                 .btn-group.input-group.btn-group-justified
                     label.btn.btn-primary.btn-primary-ghost.btn-lg#trigger-reset-modal
-                            | &nbsp; Reset
+                            | &nbsp; 重置
                     label.btn.btn-primary.btn-primary-ghost.btn-lg#challenge-help-btn
-                            | &nbsp; Help
+                            | &nbsp; 帮助
                     label.btn.btn-primary.btn-primary-ghost.btn-lg#trigger-issue-modal
                             | &nbsp; Bug
                 if (!user)
